updates folder structure

--- a/client/pages/setup.html
+++ b/client/pages/setup.html
@@ -354,7 +354,7 @@
         </div>
     </div>
 
-    <script src="ai-classifier.js"></script>
+    <script src="classifier.js"></script>
     <script>
         const suggestedTopicsList = [
             'Programming', 'Technology', 'Science', 'Education', 'Learning',
