fixed CSS gone bug

--- a/client/pages/options.html
+++ b/client/pages/options.html
@@ -3,32 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>RemoveTube Settings</title>
-  <link rel="stylesheet" href="../css/options.css">
+  <link rel="stylesheet" href="../styles/options.css">
 <body>
   <div class="container">
     <div class="header">
       <h1>🎯 RemoveTube Settings</h1>
       <p>Configure your content filtering preferences to stay focused and productive</p>
-    </div>
-
-    <div class="section ai-section">
-      <h2>🧠 Server-Based AI Filtering</h2>
-      <div class="ai-info-card">
-        <h3>Powered by Server-Based AI</h3>
-        <p>RemoveTube uses advanced AI models running on a local server:</p>
-        <ul>
-          <li>✅ <strong>High Accuracy:</strong> State-of-the-art semantic understanding</li>
-          <li>✅ <strong>Fast Performance:</strong> ~50ms response time</li>
-          <li>✅ <strong>Privacy First:</strong> Runs locally on your machine</li>
-          <li>✅ <strong>Reliable:</strong> Consistent, high-quality filtering</li>
-        </ul>
-        <p style="margin-top: 15px; font-size: 13px; opacity: 0.9;">
-          <strong>Model:</strong> Uses sentence-transformers/all-MiniLM-L6-v2 for vector embeddings
-        </p>
-        <div id="serverStatus" style="margin-top: 10px; padding: 8px; border-radius: 4px; font-size: 12px;">
-          <strong>Server Status:</strong> <span id="serverStatusText">Checking...</span>
-        </div>
-      </div>
     </div>
 
     <div class="section topics-section">
