--- a/client/pages/popup.html
+++ b/client/pages/popup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>RemoveTube</title>
-  <link rel="stylesheet" href="../css/popup.css">
+  <link rel="stylesheet" href="../styles/popup.css">
 <body>
   <div class="header">
     <h1>🎯 RemoveTube</h1>
