fixes to pagess

--- a/client/pages/options.html
+++ b/client/pages/options.html
@@ -7,7 +7,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <h1>🎯 RemoveTube Settings</h1>
+      <h1>RemoveTube Settings</h1>
       <p>Configure your content filtering preferences to stay focused and productive</p>
     </div>
 
