--- a/client/pages/popup.html
+++ b/client/pages/popup.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="../styles/popup.css">
 <body>
   <div class="header">
-    <h1>🎯 RemoveTube</h1>
+    <h1>RemoveTube</h1>
   </div>
   
   <div id="status" class="status">
